[package]
name = "resh"
version = "0.1.3"
authors = ["Koen Wilde <koen@chillheid.nl>"]
description = "A restricted shell that only allows execution of previously defined aliases"

homepage = "https://github.com/koenw/resh"
repository = "https://github.com/koenw/resh"

readme = "README.md"
license = "MIT"
keywords = ["shell", "restricted", "nrpe"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
clap = "2"
